--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 code/__pycache__/*
 __pycache__/*
 code/__pycache__/polynomial_fit.cpython-38.pyc
+documentation_images_and_videos/final_result_video.avi
